--- a/src/styles.scss
+++ b/src/styles.scss
@@ -93,7 +93,7 @@ a {
   position: fixed !important;
   right: 35px;
   bottom: 35px;
-  z-index: 1;
+  z-index: 100;
 }
 
 mat-form-field {
@@ -164,6 +164,11 @@ p.no-data {
     background: linear-gradient(100deg, rgba(255, 221, 64, 0) 0.9%, rgba(255, 221, 64, 1) 2.4%, rgba(255, 221, 64, 0.5) 5.8%, rgba(255, 221, 64, 0.1) 93%, rgba(255, 221, 64, 0.7) 96%, rgba(255, 221, 64, 0) 98%), linear-gradient(180deg, rgba(255, 221, 64, 0) 0%, rgba(255, 221, 64, 0.3) 7.9%, rgba(255, 221, 64, 0) 15%);
     border-radius: 0.125em;
   }
+}
+
+.not-attended {
+  text-decoration: line-through;
+  color: #aaa;
 }
 
 .card-grid {
