--- a/src/app/dialog/error-dialog/error-dialog.component.html
+++ b/src/app/dialog/error-dialog/error-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Fehler</h2>
+<h2 mat-dialog-title>{{data.title || 'Fehler'}}</h2>
 <mat-dialog-content>
   {{data.userMessage}}
 
