updated packages and added pwa functionality via angular cli; added service for checking pwa updates

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -8,6 +8,10 @@
   right: 0;
 }
 
+.toolbar {
+  --mat-toolbar-container-background-color: #be00ca;
+}
+
 .is-mobile .toolbar {
   position: fixed;
   z-index: 2;
