added settings component; implemented registering for push notifications

--- a/src/app/debug/debug.component.html
+++ b/src/app/debug/debug.component.html
@@ -4,3 +4,7 @@
     {{message}}
   }
 </pre>
+
+<h2>Push Notifications</h2>
+<button mat-flat-button (click)="sendMessage()">Push-Notification senden</button>
+<p>{{ sendResults() }} Nachricht(en) gesendet</p>
