--- a/src/app/statistics/penalty-table/penalty-table.component.html
+++ b/src/app/statistics/penalty-table/penalty-table.component.html
@@ -20,7 +20,7 @@
   <ng-container matColumnDef="name">
     <th mat-header-cell mat-sort-header *matHeaderCellDef>Spieler</th>
     <td mat-cell *matCellDef="let element">
-      <span [hopCurrentUser]="element.playerId">{{ element.name }}</span>
+      <span [hopCurrentUser]="element.playerId" [class.not-attended]="element.attended === false">{{ element.name }}</span>
     </td>
   </ng-container>
 
