--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -41,7 +41,7 @@ as-split {
     margin-left: 15px;
   }
 
-  button.complete-game {
+  button.complete-game, button.publish-penalties {
     margin-top: 10px;
   }
 }
