finance overview and dashboard view

--- a/src/app/finance/finance.component.html
+++ b/src/app/finance/finance.component.html
@@ -15,3 +15,8 @@
   (onUnconfirmation)="unconfirm($event)"
 >
 </hop-payment-table>
+
+<hop-balance-table
+  [data]="paymentsSummary$ | async"
+  [loading]="'payments-summary' | isLoading | async"
+></hop-balance-table>
