--- a/src/app/game/round/round.component.html
+++ b/src/app/game/round/round.component.html
@@ -2,7 +2,7 @@
   <div class="warning-container">
   @for (warning of round().warnings; track warning) {
     <div class="warning-row">
-      <mat-icon style="color: #ffa700;">warning</mat-icon>
+      <mat-icon class="warn-text">warning</mat-icon>
       {{warning}}
     </div>
   }
