--- a/src/app/shared/badge/badge.component.scss
+++ b/src/app/shared/badge/badge.component.scss
@@ -6,26 +6,26 @@
   border-radius: 6px;
 
   color: #fff;
-  background-color: #718ba3;
+  background-color: var(--color-neutral);
 
   &.success {
     color: #fff;
-    background-color: #57b90d;
+    background-color: var(--color-success);
   }
 
   &.warn {
     color: #fff;
-    background-color: #ffa700;
+    background-color: var(--color-warn);
   }
 
   &.error {
     color: #fff;
-    background-color: #f50303;
+    background-color: var(--color-error);
   }
 
   &.error-alt {
-    color: #f50303;
+    color: var(--color-error);
     background-color: #fff;
-    border: 1px solid #f50303;
+    border: 1px solid var(--color-error);
   }
 }
