--- a/src/app/shared/penalty-with-unit/penalty-with-unit.component.html
+++ b/src/app/shared/penalty-with-unit/penalty-with-unit.component.html
@@ -16,7 +16,7 @@
       @if (typeof penalty() === 'undefined') {
         Bierkiste(n)
       } @else {
-        @if (penalty() === 1) {
+        @if (penalty() === 1 || penalty() === -1) {
           {{penalty()}} Bierkiste
         } @else {
           {{penalty()}} Bierkisten
