--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -194,7 +194,7 @@
             </button>
           } @else {
             <button *hopHasRole="Role.MANAGER" mat-flat-button class="publish-penalties" (click)="publishPenalties()" [loading]="!!('publish-penalties' | isLoading | async)">
-              <mat-icon>send</mat-icon>
+              <mat-icon svgIcon="whatsapp"></mat-icon>
               Strafen bei WhatsApp veröffentlichen
             </button>
           }
