--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -3,6 +3,12 @@
   grid-template-columns: repeat(2, minmax(0, 1fr));
   grid-template-rows: repeat(5, 1fr);
   gap: 50px;
+
+  .tile-content {
+    overflow: auto;
+    max-height: 300px;
+    padding-bottom: 5px; // hack
+  }
 }
 
 @media only screen and (max-width: 1200px) {
@@ -27,4 +33,9 @@
 
 .div5 {
   grid-row-start: 3;
+}
+
+hop-streak-chart {
+  display: block;
+  margin: 15px 0;
 }
